--- a/views/layouts/navigation.handlebars
+++ b/views/layouts/navigation.handlebars
@@ -25,24 +25,24 @@
 	      </ul>
 
 
-	      <ul class="right hide-on-med-and-down ">
-	        
-	        
-	        
-	       <li>
-	       		<div class="input-field">
-	          <input id="search" type="search" placeholder='find latest trends' required>
-	          <label for="search"><i class="material-icons black-text">search</i></label>
-	          <i class="material-icons">close</i>
-	        </div>
-	       </li>
-	        <li>
-	        	<a href="mobile.html" class='black-text chip'>
-	        	<i class="material-icons">shopping_cart</i> 
-	        	<span class='chip black-text'> 0 </span>
-	        	</a>
-	       </li>
-	       <li><a href="/login" class='black-text'>Login</a></li>
+	      <ul class="right hide-on-med-and-down ">       
+		       <li>
+			       <div class="nav-wrapper">
+				      <form>
+				        <div class="input-field">
+				          <input id="search" type="search" placeholder='search...'required>
+				          <label for="search"><i class="black-text material-icons">search</i></label>
+				          <i class="material-icons">close</i>
+				        </div>
+				      </form>
+				   </div>	       
+		       </li>
+		       <li >
+		       	    		       	
+			        <i class="material-icons ">shopping_cart</i> 			        	
+		        	
+		       </li>
+		       <li><a href="/login" class='black-text'>Login</a></li>
 	      </ul>
 
 
