refactored blog view

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -31,7 +31,7 @@
               <p class='truncate'>{{title}}</p>
             </div>
             <div class="card-action">
-              <a href="/blog/{{id}}" class='chip black white-text'>Read more</a>
+              <a href="/blog/{{post_id}}" class='chip black white-text'>Read more</a>
             </div>
           </div>
         </div>
