--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,21 @@ nav .brand-logo {
    max-width: 100%;
    max-height: 100%;
 }
+.collection .collection-item.avatar .circle {
+    position: absolute;
+    width: 20%;
+    height: 99%;
+    overflow: hidden;
+    left: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 0%;
+    -webkit-transform: skew(-20deg);
+	   -moz-transform: skew(-20deg);
+	     -o-transform: skew(-20deg);
+
+}
+
+.collection .collection-item{
+	padding:0;
+}
