--- a/views/layouts/navigation.handlebars
+++ b/views/layouts/navigation.handlebars
@@ -3,8 +3,8 @@
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="/css/style.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,7 +15,7 @@
       
 	  <nav class='white black-text large'>
 	    <div class="nav-wrapper container">
-	      <img src='img/logo.png' class='brand-logo center small'>
+	      <img src='/img/logo.png' class='brand-logo center small'>
 	      <a href="#" data-activates="mobileNav" class="button-collapse black-text"><i class="material-icons">menu</i></a>
 	      <ul class="left hide-on-med-and-down ">
 	        <li><a href="/" class='black-text'>Home</a></li>
