added shoping functionalities

--- a/views/layouts/navigation.handlebars
+++ b/views/layouts/navigation.handlebars
@@ -85,6 +85,15 @@
       	  $(".button-collapse").sideNav();
       	  $(document).ready(function(){
 		      $('.slider').slider({full_width: true});
+		      $('.materialboxed').materialbox();
+		       $('.modal-trigger').leanModal();
+
+
+		      
+
+
+
+
 		    });
       </script>
     </body>
